Add tests with assertions lab05